Update index.html and main.jsx to set up root element for React rendering

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
   <title>VibraListen</title>
 </head>
 <body>
-  <script type="module" src="./src/main.jsx"></script>
+  <div id="root"></div>
+
 </body>
 </html>
