--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, width=device-width">
  
-
+  <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
  
   <title>VibraListen</title>
 </head>
