--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,8 @@
   <meta name="apple-mobile-web-app-title" content="VibraListen" />
   <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 
+  <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
+
  
   <title>VibraListen</title>
 </head>
