--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,13 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, width=device-width">
- 
+
   <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
  
   <title>VibraListen</title>
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="src/main.jsx"></script>
 </body>
 </html>
