--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
  
   <title>VibraListen</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
   <div id="root"></div>
